<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:background="@color/colorPrimary"
    tools:context="com.sociomas.aventones.UI.Activities.SolicitarAventon.SolicitarAventonScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/toolbar"/>
    </android.support.design.widget.AppBarLayout>

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_close"
            android:layout_below="@+id/appBarLayout"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:id="@+id/imgChecked"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_below="@+id/appBarLayout"
            android:layout_marginTop="35dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_checked"/>

        <TextView
            android:id="@+id/tvTitleAcabas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgChecked"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/acabasDe"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/tvNameConductor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@+id/tvTitleAcabas"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/JuanPablo"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/tvRecuerda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvNameConductor"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/RecuerdaRespetar"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/tvCondiciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvRecuerda"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/susCondiciones"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/RecyclerView"
            android:layout_width="100dp"
            android:layout_centerHorizontal="true"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/tvCondiciones"
            android:layout_above="@+id/btnEntendido"/>

        <Button
            android:id="@+id/btnEntendido"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            style="@style/botonNegro"
            android:text="@string/okEntendido"
            android:onClick="onEntendido"
            android:layout_marginBottom="10dp"

            android:layout_above="@+id/footerNavegacion"/>

        <com.sociomas.core.UI.Controls.Notification.FooterNavegacion
            android:id="@+id/footerNavegacion"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.sociomas.core.UI.Controls.Notification.FooterNavegacion>

      </RelativeLayout>
    <include layout="@layout/navigation_drawer"/>
</android.support.v4.widget.DrawerLayout>
